--- a/1st RMkdwn.rmd
+++ b/1st RMkdwn.rmd
@@ -2,7 +2,7 @@
 title: "First RMarkdown file"
 author: "Laurent Denis"
 date: "05/06/2020"
-output: html_document
+output: github_document
 ---
 
 ```{r setup, include=FALSE}
